--- a/projects.html
+++ b/projects.html
@@ -87,11 +87,26 @@
 		<h2>About me</h2>
 		<p>I have worked as a designer for 20+ years. I have worked in Fintech, SaaS, Education, <abbr>B2B</abbr> and various other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank">Housecall Pro</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank">Mavenlink</a> (now Kanatata), <a href="https://www.hrblock.com/" rel="external" target="_blank"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank">The Church of Jesus Christ of Latter-day Saints</a>. I enjoy human-centered design, and working with others to design better products and experiences.</p>
 
-		<a href="projects.html" class="liink">
-			<span class="title">Selected Projects</span>
-			<span class="desc">See a sample of my design work.</span>
+		<h2>Recent Work</h2>
+		<a href="6.html" class="liink">
+			<span class="title">Housecall Pro (<abbr>HCP</abbr>)</span>
+			<span class="desc">Lead designer on onboarding patterns and strategy and iOS design system.</span>
 		</a>
-		
+		<a href="4.html" class="liink">
+			<span class="title">Mavenlink</span>
+			<span class="desc">Lead product designer on resource and project management.</span>
+		</a>
+		<a href="1.html" class="liink">
+			<span class="title">H&amp;R Block</span>
+			<span class="desc"><abbr>UX</abbr> designer on tax-pro product, a channel for a billion dollars in revenue.</span>
+		<a href="2.html" class="liink">
+			<span class="title"><abbr>WGU</abbr></span>
+			<span class="desc">Lead design on <abbr>WGU</abbr>&rsquo;s student app.</span>
+		</a>
+		<a href="3.html" class="liink">
+			<span class="title"><abbr>TCS</abbr></span>
+			<span class="desc"><abbr>UX</abbr>, <abbr>IX</abbr>, and <abbr>UI</abbr> design for financial products.</span>
+		</a>
 		<footer>
 		<h5>Find me on the www</h5>
 		<ul>
