--- a/6.html
+++ b/6.html
@@ -17,7 +17,8 @@
 	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
 
 	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="robots" content="noindex">
 
 	<title>Nathan Philpot. Design is honest.</title>
 
@@ -26,7 +27,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Slackside+One&display=swap" rel="stylesheet">
 
 	<script src="js/scripts.js" type="text/javascript"></script>
 
@@ -34,9 +34,6 @@
 <body>
 
 	<div class="page">
-		<figure class="hero">
-			<img src="img/hcp-1.png" alt="Portfolio" />
-		</figure>
 		<nav>
 			<a href="/">&larr; Home</a>
 		</nav>
