--- a/index.html
+++ b/index.html
@@ -22,41 +22,30 @@
 	<title>Nathan Philpot. Design is honest.</title>
 
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
-	
-	
 
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="dark">
 	<div class="page">
 		<header>
 			<h1>Nathan Philpot<br/><span>Product Design</span></h1>
+			<label class="switch">
+				<input type="checkbox" id="appearance" checked>
+				<span class="slider"></span>
+			</label>
 		</header>
-		<!-- <section class="process row">
-			<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-			<h1>I design usable interfaces and enjoyable user experiences. I have been in <abbr>IC</abbr>, lead, and management design roles.</h1>
-			<div class="col">
-				<h5>My Design Process</h5>
-			</div>
-			<div class="col">
-				<p>Talk to and understand your customers. Collaborate with your team. Prototype and test until you are confident in your solutions.</p>
-				<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more. Which are great when needed.</p>
-				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
-			</div>
-		</section> -->
-			<div class="heart-machine">
-				<img src="img/heart.gif" alt="heart" class="heart defibullator" />
-				<a class="defibullator btn" id="defibullator">You&rsquo;re visit gets my heart pumping! <span class="hotkey">spacebar</span></a>
-			</div>
-			<script src="js/howler.core.min.js"></script>
-			<script src="js/drums.js"></script>
+		<div class="heart-machine">
+			<img src="img/heart.gif" alt="heart" class="heart defibullator" />
+			<a class="defibullator btn" id="defibullator">You&rsquo;re visit gets my heart pumping! <span class="hotkey">spacebar</span></a>
+		</div>
+		<script src="js/howler.core.min.js"></script>
+		<script src="js/drums.js"></script>
 
 		<h2>About me</h2>
-		<p>I have worked as a designer for 20+ years. I have worked in Fintech, SaaS, Education, <abbr>B2B</abbr> and other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank">Housecall Pro</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank">Mavenlink</a> (now Kantata), <a href="https://www.hrblock.com/" rel="external" target="_blank"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank">The Church of Jesus Christ of Latter-day Saints</a>. I have held <abbr>IC</abbr>, lead, and management roles. I enjoy human-centered design, and working with others to design better products and experiences.</p>
-
+		<p>With 20+ years of experience as a designer, I&rsquo;ve worked in Fintech, SaaS, Education, Security, B2B, and other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank">Housecall Pro</a>, <a href="https://circleci.com/" rel="external" target="_blank">CircleCI</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank">Mavenlink</a> (now Kantata), <a href="https://www.hrblock.com/" rel="external" target="_blank"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank">The Church of Jesus Christ of Latter-day Saints</a>. Throughout my career, I&rsquo;ve taken on roles ranging from individual contributor to lead and management, driving projects from concept to completion (0&ndash;1). I enjoy human-centered design and working with others to create better products and experiences that are good for people and the business, resulting in better engagement and retention.</p>
 		<div class="btns">
 			<a href="projects.html" class="btn">Check out a sample of my design work.
 				<svg width="16" height="27" viewBox="0 0 16 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -68,7 +57,7 @@
 		</div>
 	</div>
 
-	<footer class="dark">
+	<footer>
 		<div class="page">
 			<h5>Find me on the www</h5>
 			<ul>
@@ -84,6 +73,6 @@
 			<a class="btn">Let me know</a>
 		</div>
 	</footer>
-
+	<script src="js/scripts.js"></script>
 </body>
 </html>
