--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
-<body class="dark">
+<body>
 	<div class="page">
 		<header>
 			<h1>Nathan Philpot<br/><span>Product Design</span></h1>
 			<label class="switch">
-				<input type="checkbox" id="appearance" checked>
+				<input type="checkbox" id="appearance">
 				<span class="slider"></span>
 			</label>
 		</header>
