--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<li><i class="emoji">&#x1F44D;</i></li>
 			</ul>
 
-			<p>I want your feedback. Is this website working? Did you find what you were looking for? Why did you or didn&rsquo;t you reach out to me?</p>
+			<p>You are probably here looking for a product designer. I want your feedback. Is this website working?</p>
 			<a class="btn" rel="external" target="_blank" href="https://forms.gle/6DT7bmUbpwPyiETB9">Let me know</a>
 		</div>
 	</footer>
