--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://lonekorean.github.io/mini-preview/jquery.minipreview.js"></script>
+	<script src="js/scripts.js"></script>
+
 </head>
 <body>
 	<div class="page">
@@ -43,7 +47,7 @@
 
 		<section>
 			<h2>About me</h2>
-			<p>With 20+ years of experience as a designer, I&rsquo;ve worked in Fintech, SaaS, Education, Security, B2B, and other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank">Housecall Pro</a>, <a href="https://circleci.com/" rel="external" target="_blank">CircleCI</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank">Mavenlink</a> (now Kantata), <a href="https://www.hrblock.com/" rel="external" target="_blank"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank">The Church of Jesus Christ of Latter-day Saints</a>. Throughout my career, I&rsquo;ve taken on roles ranging from individual contributor to lead and management, driving projects from concept to completion (0&ndash;1). I enjoy human-centered design and working with others to create better products and experiences that are good for people and the business, resulting in better engagement and retention.</p>
+			<p>With 20+ years of experience as a designer, I&rsquo;ve worked in Fintech, SaaS, Education, Security, B2B, and other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank" class="link-preview">Housecall Pro</a>, <a href="https://circleci.com/" rel="external" target="_blank" class="link-preview">CircleCI</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank" class="link-preview">Mavenlink</a> (now Kantata), <a href="https://www.hrblock.com/" rel="external" target="_blank" class="link-preview"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank" class="link-preview"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank" class="link-preview"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank" class="link-preview">The Church of Jesus Christ of Latter-day Saints</a>. Throughout my career, I&rsquo;ve taken on roles ranging from individual contributor to lead and management, driving projects from concept to completion (0&ndash;1). I enjoy human-centered design and working with others to create better products and experiences that are good for people and the business.</p>
 		</section>
 		<section>
 			<div class="row">
@@ -60,10 +64,10 @@
 			<h2>Find me on the www</h2>
 			<ul>
 				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank">Email me</a></li>
-				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
-				<li><a href="https://x.com/nathanphilpot" target="_blank"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
-				<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
-				<li><a href="https://github.com/nathanrp" target="_blank">Github<i>&nearr;</i></a></li>
+				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank" class="link-preview">LinkedIn<i>&nearr;</i></a></li>
+				<li><a href="https://x.com/nathanphilpot" target="_blank" class="link-preview"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
+				<li><a href="https://dribbble.com/nathanphilpot" target="_blank" class="link-preview">Dribbble<i>&nearr;</i></a></li>
+				<li><a href="https://github.com/nathanrp" target="_blank" class="link-preview">Github<i>&nearr;</i></a></li>
 				<li><i class="emoji">&#x1F44D;</i></li>
 			</ul>
 		</footer>
@@ -77,6 +81,5 @@
 		</div>
 		hello
 	</div>
-	<script src="js/scripts.js"></script>
 </body>
 </html>
