--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
 		<footer>
 			<h2>Find me on the www</h2>
 			<ul>
-				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank">Email me</a></li>
+				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank" class="alt-preview mini-preview-anchor">
+					Email me
+					<div class="mini-preview-wrapper">
+						<div class="mini-preview-loading">Send me an email&hellip;</div>
+					</div>
+				</a></li>
 				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank" class="link-preview">LinkedIn<i>&nearr;</i></a></li>
 				<li><a href="https://x.com/nathanphilpot" target="_blank" class="link-preview"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
 				<li><a href="https://dribbble.com/nathanphilpot" target="_blank" class="link-preview">Dribbble<i>&nearr;</i></a></li>
