--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 	<div class="page-wrapper">
 		<div class="page">
 		<div class="toolbar">
-			<label class="switch appearance-switch">
-				<input type="checkbox" id="appearance" />
-				<span class="slider"></span>
-			</label>
+			<div class="tools">
+				<label class="switch appearance-switch">
+					<input type="checkbox" id="appearance" />
+					<span class="slider"></span>
+				</label>
+			</div>
 		</div>
 		<header>
 			<a href="">Nathan Philpot</a>
